# db-report

./: .gitignore  Dockerfile  PG-Dockerfile  README.md  config.ini  docker-compose.yaml  init-pg-stat-statements.sh  logging.ini  pyproject.toml
src/: main.py
src/db_report/containers/: containers.py
src/db_report/core/: mappers.py
src/db_report/storage/: db.py  engine.py
