[project]
name = "db-report"
version = "0.1.0"
description = ""
authors = [{ name = "wojwarych", email = "woj.warych@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = []

[dependency-groups]
dev = [
    "pylint>=3.3.7",
    "ruff>=0.12.1",
]
prod = [
    "falcon>=4.0.2,<5",
    "uvicorn>=0.35.0,<0.36",
    "sqlalchemy[asyncio]>=2.0.41,<3",
    "asyncpg>=0.30.0,<0.31",
    "dependency-injector>=4.48.1,<5",
]

[tool.uv]
default-groups = ["prod"]

[tool.hatch.build.targets.sdist]
include = ["src/db_report"]

[tool.hatch.build.targets.wheel]
include = ["src/db_report"]

[tool.hatch.build.targets.wheel.sources]
"src/db_report" = "db_report"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
